--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
 
-    <title>Random RGB color picker</title>
+    <title>Random RGB Color Picker</title>
   </head>
   <body>
     <div id="root"></div>
